server/src/main/resources/templates/style.css
:root{
    --sweetea-blue: #97D0F1;
    --sweetea-blue-darkish: #62B8EA;
    --sweetea-blue-darker: #54B2E8;
    --sweetea-blue-darkest: #0A58CA;
}
/*form {
    padding: 10px;
}
form * {
    margin: 10px;
}
form > button {
    margin-left: 25em;
}*/
td img, td embed{
    width: 15em;
    border: 1px solid black;
}
/*
table {
    border: 1px solid black;
    border-radius: 1em;
    font-size: 20px;
    table-layout: fixed;
    border-spacing: 0px;
}
td {
    border-top: 1px solid black;
    padding-bottom: 1em;
}
th, td {
    /*border-right: 1px solid black;*//*
    text-align: center;
    padding: 5px;
}
tr:first-child > th:nth-child(1){
    border-top-left-radius: 1em;
}
tr:last-child > td:nth-child(1){
    border-bottom-left-radius: 1em;
}
tr:first-child > th:last-child{
    border-right: 0px;
    border-top-right-radius: 1em;
}
tr:last-child > td:last-child{
    border-right: 0px;
    border-bottom-right-radius: 1em;
}
th:nth-child(even), td:nth-child(even) {
    background-color: #e9f5fc;
}
tr > *{
    background-color: #eff1f5;
}*/
.bg-swt{
    background-color: var(--sweetea-blue);
    color: #fff;
}
.fg-swt{
    background-color: #fff;
    color: var(--sweetea-blue);
}
.btn-sweetea {
    --bs-btn-color: #fff;
    --bs-btn-bg: var(--sweetea-blue);
    --bs-btn-border-color: var(--sweetea-blue);
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: var(--sweetea-blue-darkish);
    --bs-btn-hover-border-color: var(--sweetea-blue-darker);
    --bs-btn-focus-shadow-rgb: 49, 132, 253;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: var(--sweetea-blue-darker);
    --bs-btn-active-border-color: var(--sweetea-blue-darkest);
    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
    --bs-btn-disabled-color: #fff;
    --bs-btn-disabled-bg: var(--sweetea-blue);
    --bs-btn-disabled-border-color: var(--sweetea-blue);
}
#eventContainer{
    overflow-y: auto;
    border: 1px solid var(--bs-border-color);
    border-radius: var(--bs-border-radius);
}
#selectionoutline{
    position:absolute;
    top: -204px;
    left: -204px;
    width: 200px;
    height: 200px;
    border-radius: var(--bs-border-radius);
    padding: 0px 5px;
    border: 3px solid var(--sweetea-blue);
    pointer-events: none;
}

